# poker

./: .dockerignore  .rayignore  Dockerfile  README.md  alg.py  docker-compose.yml  download_results  evaluate.py  existing_results  get_from_docker  get_models_from_docker  main.py  play_hand.py  pyproject.toml  remove_last_X_run_results  speedtest.py  state_interpreter.py  test.py  test_2.py  test_3.py  upload
notebooks/: feature_diagnostics.ipynb
run/: evaluate.py  evaluate_puzzles.py  evaluate_tournament.py  main.py  speedtest.py
run/app/: run.py
run/behavior_cloning/: Dockerfile  docker-compose.yml  generate_data.py  train.py
run/ppo_self_play/: evaluate.py  evaluate_memory_impact.py  evaluate_population.py  evaluate_puzzles.py  evaluate_tournament.py  leaderboard_gui.py  main.py
src/: action_interpreter.py  alg.py  baseline_model.py  casino_manager.py  game_registry.py  global_settings.py  leaderboard_actor.py  leaderboard_gui.py  models.py  player_ai.py  shared.py  state_interpreter.py  table_actor.py  trainer_actor.py
src/app/: play_gui.py  play_vs_ai.py
v1/: action_interpreter.py  alg.py  casino_manager.py  global_settings.py  interpreter.py  leaderboard_actor.py  leaderboard_gui.py  main.py  models.py  player_actor.py  state_interpreter.py  table_actor.py
v2/: Dockerfile  action_interpreter.py  alg.py  casino_manager.py  docker-compose.yml  evaluate.py  evaluate_population.py  global_settings.py  leaderboard_actor.py  leaderboard_gui.py  main.py  models.py  pyproject.toml  speedtest.py  state_interpreter.py  table_actor.py  trainer_actor.py
(+7 files in other folders)
