[project]
name = "poker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pip>=26.0.1",
    "pokerkit>=0.7.3",
    "ray[default]>=2.54.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools<82",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
